--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
   </style>
   <script>
     window.$docsify = {
-      name: 'CGDataVis Series',
-      repo: 'wx-chevalier/CGDataVis-Series',
+      name: 'DevOps Series',
+      repo: 'wx-chevalier/DevOps-Series',
       loadSidebar: "_sidebar.md",
       alias: {
         // '/.*/_sidebar.md': './sidebar.md',
